--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/gestion-sst/gestion-sst.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/gestion-sst/gestion-sst.component.html
@@ -63,8 +63,8 @@
             </div>
         </div>
         <div class="d-flex mt-2em align-items-center animatedDown" *ngIf="formGestionSst.value.tieneObservaciones == true" align="left">
-            <div class="text-area-quill"
-            [class.color-secondaryColor]="formGestionSst.get('observaciones').invalid && formGestionSst.get('observaciones').touched || formGestionSst.get('observaciones').invalid">
+            <div    class="text-area-quill"
+                    [class.color-secondaryColor]="formGestionSst.get('observaciones').invalid && formGestionSst.get('observaciones').touched || formGestionSst.get('observaciones').invalid">
                 <label  class="text-area-quill--label align-left-label"
                         [class.colorMainColor]="!(formGestionSst.get('observaciones').invalid && formGestionSst.get('observaciones').touched || formGestionSst.get('observaciones').invalid)">
                         Observaciones a la gestión de la seguridad y salud en el trabajo
@@ -83,6 +83,15 @@
             </span>
             <span class="contador miles" *ngIf="formGestionSst.get('observaciones').value === null">
               1000
+            </span>
+            <span class="icon-incompleto">
+                <img    class="icon-incompleto--img"
+                        src="assets/img/icon/incompleto.svg"
+                        alt="este campo es requerido"
+                        [matTooltipPosition]="'above'"
+                        matTooltip="Debe ingresar la información en el campo para continuar"
+                        matTooltipClass="info-tooltip"
+                        *ngIf="formGestionSst.get('observaciones').invalid && formGestionSst.get('observaciones').touched || formGestionSst.get('observaciones').invalid">
             </span>
         </div>
         <div class="text-center mt-1em">
