--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/verificar-avance-fisico/verificar-avance-fisico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/verificar-avance-fisico/verificar-avance-fisico.component.html
@@ -41,7 +41,10 @@
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <app-tabla-avance-fisico [seguimientoSemanal]="seguimientoSemanal" [esVerDetalle]="esVerDetalle" [avanceFisicoObs]="avanceFisicoObs"></app-tabla-avance-fisico>
+            <app-tabla-avance-fisico    [seguimientoSemanal]="seguimientoSemanal"
+                                        [esVerDetalle]="esVerDetalle"
+                                        [avanceFisicoObs]="avanceFisicoObs">
+            </app-tabla-avance-fisico>
         </mat-expansion-panel>
     </mat-accordion>
 </section>
