--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/gestion-ambiental/gestion-ambiental.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/gestion-ambiental/gestion-ambiental.component.html
@@ -45,8 +45,8 @@
                     </div>
                 </div>
                 <div class="d-flex mt-2em align-items-center animatedDown" *ngIf="formGestionAmbientalObservacion.value.tieneObservaciones == true" align="left">
-                    <div class="text-area-quill"
-                    [class.color-secondaryColor]="formGestionAmbientalObservacion.get('observaciones').invalid && formGestionAmbientalObservacion.get('observaciones').touched || formGestionAmbientalObservacion.get('observaciones').invalid">
+                    <div    class="text-area-quill"
+                            [class.color-secondaryColor]="formGestionAmbientalObservacion.get('observaciones').invalid && formGestionAmbientalObservacion.get('observaciones').touched || formGestionAmbientalObservacion.get('observaciones').invalid">
                         <label  class="text-area-quill--label align-left-label"
                                 [class.colorMainColor]="!(formGestionAmbientalObservacion.get('observaciones').invalid && formGestionAmbientalObservacion.get('observaciones').touched || formGestionAmbientalObservacion.get('observaciones').invalid)">
                                 Observaciones a la gestión ambiental
@@ -65,6 +65,15 @@
                     </span>
                     <span class="contador miles" *ngIf="formGestionAmbientalObservacion.get('observaciones').value === null">
                       1000
+                    </span>
+                    <span class="icon-incompleto">
+                        <img    class="icon-incompleto--img"
+                                src="assets/img/icon/incompleto.svg"
+                                alt="este campo es requerido"
+                                [matTooltipPosition]="'above'"
+                                matTooltip="Debe ingresar la información en el campo para continuar"
+                                matTooltipClass="info-tooltip"
+                                *ngIf="formGestionAmbientalObservacion.get('observaciones').invalid && formGestionAmbientalObservacion.get('observaciones').touched || formGestionAmbientalObservacion.get('observaciones').invalid">
                     </span>
                 </div>
                 <div class="text-center mt-1em">
@@ -199,8 +208,8 @@
                                 </div>
                             </div>
                             <div class="d-flex mt-2em align-items-center animatedDown" *ngIf="formMaterialObservacion.value.tieneObservaciones == true" align="left">
-                                <div class="text-area-quill"
-                                [class.color-secondaryColor]="formMaterialObservacion.get('observaciones').invalid && formMaterialObservacion.get('observaciones').touched || formMaterialObservacion.get('observaciones').invalid">
+                                <div    class="text-area-quill"
+                                        [class.color-secondaryColor]="formMaterialObservacion.get('observaciones').invalid && formMaterialObservacion.get('observaciones').touched || formMaterialObservacion.get('observaciones').invalid">
                                     <label  class="text-area-quill--label align-left-label"
                                             [class.colorMainColor]="!(formMaterialObservacion.get('observaciones').invalid && formMaterialObservacion.get('observaciones').touched || formMaterialObservacion.get('observaciones').invalid)">
                                             Observaciones al manejo de materiales e insumos
@@ -219,6 +228,15 @@
                                 </span>
                                 <span class="contador miles" *ngIf="formMaterialObservacion.get('observaciones').value === null">
                                   1000
+                                </span>
+                                <span class="icon-incompleto">
+                                    <img    class="icon-incompleto--img"
+                                            src="assets/img/icon/incompleto.svg"
+                                            alt="este campo es requerido"
+                                            [matTooltipPosition]="'above'"
+                                            matTooltip="Debe ingresar la información en el campo para continuar"
+                                            matTooltipClass="info-tooltip"
+                                            *ngIf="formMaterialObservacion.get('observaciones').invalid && formMaterialObservacion.get('observaciones').touched || formMaterialObservacion.get('observaciones').invalid">
                                 </span>
                             </div>
                             <div class="text-center mt-1em">
@@ -303,8 +321,8 @@
                                 </div>
                             </div>
                             <div class="d-flex mt-2em align-items-center animatedDown" *ngIf="formResiduosConstruccion.value.tieneObservaciones == true" align="left">
-                                <div class="text-area-quill"
-                                [class.color-secondaryColor]="formResiduosConstruccion.get('observaciones').invalid && formResiduosConstruccion.get('observaciones').touched || formResiduosConstruccion.get('observaciones').invalid">
+                                <div    class="text-area-quill"
+                                        [class.color-secondaryColor]="formResiduosConstruccion.get('observaciones').invalid && formResiduosConstruccion.get('observaciones').touched || formResiduosConstruccion.get('observaciones').invalid">
                                     <label  class="text-area-quill--label align-left-label"
                                             [class.colorMainColor]="!(formResiduosConstruccion.get('observaciones').invalid && formResiduosConstruccion.get('observaciones').touched || formResiduosConstruccion.get('observaciones').invalid)">
                                             Observaciones a los residuos de construcción y demolición
@@ -323,6 +341,15 @@
                                 </span>
                                 <span class="contador miles" *ngIf="formResiduosConstruccion.get('observaciones').value === null">
                                   1000
+                                </span>
+                                <span class="icon-incompleto">
+                                    <img    class="icon-incompleto--img"
+                                            src="assets/img/icon/incompleto.svg"
+                                            alt="este campo es requerido"
+                                            [matTooltipPosition]="'above'"
+                                            matTooltip="Debe ingresar la información en el campo para continuar"
+                                            matTooltipClass="info-tooltip"
+                                            *ngIf="formResiduosConstruccion.get('observaciones').invalid && formResiduosConstruccion.get('observaciones').touched || formResiduosConstruccion.get('observaciones').invalid">
                                 </span>
                             </div>
                             <div class="text-center mt-1em">
@@ -408,8 +435,8 @@
                                 </div>
                             </div>
                             <div class="d-flex mt-2em align-items-center animatedDown" *ngIf="formResiduosPeligrosos.value.tieneObservaciones == true" align="left">
-                                <div class="text-area-quill"
-                                [class.color-secondaryColor]="formResiduosPeligrosos.get('observaciones').invalid && formResiduosPeligrosos.get('observaciones').touched || formResiduosPeligrosos.get('observaciones').invalid">
+                                <div    class="text-area-quill"
+                                        [class.color-secondaryColor]="formResiduosPeligrosos.get('observaciones').invalid && formResiduosPeligrosos.get('observaciones').touched || formResiduosPeligrosos.get('observaciones').invalid">
                                     <label  class="text-area-quill--label align-left-label"
                                             [class.colorMainColor]="!(formResiduosPeligrosos.get('observaciones').invalid && formResiduosPeligrosos.get('observaciones').touched || formResiduosPeligrosos.get('observaciones').invalid)">
                                             Observaciones al manejo de residuos peligrosos y especiales
@@ -428,6 +455,15 @@
                                 </span>
                                 <span class="contador miles" *ngIf="formResiduosPeligrosos.get('observaciones').value === null">
                                   1000
+                                </span>
+                                <span class="icon-incompleto">
+                                    <img    class="icon-incompleto--img"
+                                            src="assets/img/icon/incompleto.svg"
+                                            alt="este campo es requerido"
+                                            [matTooltipPosition]="'above'"
+                                            matTooltip="Debe ingresar la información en el campo para continuar"
+                                            matTooltipClass="info-tooltip"
+                                            *ngIf="formResiduosPeligrosos.get('observaciones').invalid && formResiduosPeligrosos.get('observaciones').touched || formResiduosPeligrosos.get('observaciones').invalid">
                                 </span>
                             </div>
                             <div class="text-center mt-1em">
@@ -513,8 +549,8 @@
                                 </div>
                             </div>
                             <div class="d-flex mt-2em align-items-center animatedDown" *ngIf="formManejoOtra.value.tieneObservaciones == true" align="left">
-                                <div class="text-area-quill"
-                                [class.color-secondaryColor]="formManejoOtra.get('observaciones').invalid && formManejoOtra.get('observaciones').touched || formManejoOtra.get('observaciones').invalid">
+                                <div    class="text-area-quill"
+                                        [class.color-secondaryColor]="formManejoOtra.get('observaciones').invalid && formManejoOtra.get('observaciones').touched || formManejoOtra.get('observaciones').invalid">
                                     <label  class="text-area-quill--label align-left-label"
                                             [class.colorMainColor]="!(formManejoOtra.get('observaciones').invalid && formManejoOtra.get('observaciones').touched || formManejoOtra.get('observaciones').invalid)">
                                             Observaciones a otra
@@ -533,6 +569,15 @@
                                 </span>
                                 <span class="contador miles" *ngIf="formManejoOtra.get('observaciones').value === null">
                                   1000
+                                </span>
+                                <span class="icon-incompleto">
+                                    <img    class="icon-incompleto--img"
+                                            src="assets/img/icon/incompleto.svg"
+                                            alt="este campo es requerido"
+                                            [matTooltipPosition]="'above'"
+                                            matTooltip="Debe ingresar la información en el campo para continuar"
+                                            matTooltipClass="info-tooltip"
+                                            *ngIf="formManejoOtra.get('observaciones').invalid && formManejoOtra.get('observaciones').touched || formManejoOtra.get('observaciones').invalid">
                                 </span>
                             </div>
                             <div class="text-center mt-1em">
