--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/registro-fotografico/registro-fotografico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/registro-fotografico/registro-fotografico.component.html
@@ -47,8 +47,8 @@
             </div>
         </div>
         <div class="d-flex mt-2em align-items-center animatedDown" *ngIf="formRegistroFotografico.value.tieneObservaciones == true" align="left">
-            <div class="text-area-quill"
-            [class.color-secondaryColor]="formRegistroFotografico.get('observaciones').invalid && formRegistroFotografico.get('observaciones').touched || formRegistroFotografico.get('observaciones').invalid">
+            <div    class="text-area-quill"
+                    [class.color-secondaryColor]="formRegistroFotografico.get('observaciones').invalid && formRegistroFotografico.get('observaciones').touched || formRegistroFotografico.get('observaciones').invalid">
                 <label  class="text-area-quill--label align-left-label"
                         [class.colorMainColor]="!(formRegistroFotografico.get('observaciones').invalid && formRegistroFotografico.get('observaciones').touched || formRegistroFotografico.get('observaciones').invalid)">
                         Observaciones al registro fotográfico
@@ -67,6 +67,15 @@
             </span>
             <span class="contador miles" *ngIf="formRegistroFotografico.get('observaciones').value === null">
               1000
+            </span>
+            <span class="icon-incompleto">
+                <img    class="icon-incompleto--img"
+                        src="assets/img/icon/incompleto.svg"
+                        alt="este campo es requerido"
+                        [matTooltipPosition]="'above'"
+                        matTooltip="Debe ingresar la información en el campo para continuar"
+                        matTooltipClass="info-tooltip"
+                        *ngIf="formRegistroFotografico.get('observaciones').invalid && formRegistroFotografico.get('observaciones').touched || formRegistroFotografico.get('observaciones').invalid">
             </span>
         </div>
         <div class="text-center mt-1em">
