--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/reporte-actividades/reporte-actividades.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/reporte-actividades/reporte-actividades.component.html
@@ -53,8 +53,8 @@
                             </div>
                         </div>
                         <div class="d-flex mt-2em align-items-center animatedDown" *ngIf="formResumenGeneral.value.tieneObservaciones == true" align="left">
-                            <div class="text-area-quill"
-                            [class.color-secondaryColor]="formResumenGeneral.get('observaciones').invalid && formResumenGeneral.get('observaciones').touched || formResumenGeneral.get('observaciones').invalid">
+                            <div    class="text-area-quill"
+                                    [class.color-secondaryColor]="formResumenGeneral.get('observaciones').invalid && formResumenGeneral.get('observaciones').touched || formResumenGeneral.get('observaciones').invalid">
                                 <label  class="text-area-quill--label align-left-label"
                                         [class.colorMainColor]="!(formResumenGeneral.get('observaciones').invalid && formResumenGeneral.get('observaciones').touched || formResumenGeneral.get('observaciones').invalid)">
                                         Observaciones al resumen general del estado del contrato
@@ -73,6 +73,15 @@
                             </span>
                             <span class="contador miles" *ngIf="formResumenGeneral.get('observaciones').value === null">
                               1000
+                            </span>
+                            <span class="icon-incompleto">
+                                <img    class="icon-incompleto--img"
+                                        src="assets/img/icon/incompleto.svg"
+                                        alt="este campo es requerido"
+                                        [matTooltipPosition]="'above'"
+                                        matTooltip="Debe ingresar la información en el campo para continuar"
+                                        matTooltipClass="info-tooltip"
+                                        *ngIf="formResumenGeneral.get('observaciones').invalid && formResumenGeneral.get('observaciones').touched || formResumenGeneral.get('observaciones').invalid">
                             </span>
                         </div>
                         <div class="text-center mt-1em">
