--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/registrar-liquidacion-contrato/registrar-liquidacion-contrato.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/registrar-liquidacion-contrato/registrar-liquidacion-contrato.component.html
@@ -24,7 +24,7 @@
     <mat-accordion *ngIf="listaAcordeonSinRegistro.length > 0 || listaAcordeonEnProcesoFirma.length > 0 || listaAcordeonLiquidado.length > 0">
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title sin-diligenciar">
+                <mat-panel-title class="expansion-style--title" [ngClass]="semaforoSinRegistro">
                     Sin registro de liquidación
                 </mat-panel-title>
             </mat-expansion-panel-header>
@@ -34,7 +34,7 @@
 
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title">
+                <mat-panel-title class="expansion-style--title" [ngClass]="semaforoEnProceso">
                     En proceso de firmas
                 </mat-panel-title>
             </mat-expansion-panel-header>
@@ -44,7 +44,7 @@
 
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title">
+                <mat-panel-title class="expansion-style--title" [ngClass]="semaforoLiquidacion">
                     Liquidación
                 </mat-panel-title>
             </mat-expansion-panel-header>
