--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/tabla-informe-final-rlc/tabla-informe-final-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/tabla-informe-final-rlc/tabla-informe-final-rlc.component.html
@@ -1,12 +1,12 @@
-<div class="table-responsive">
+<div class="table-responsive" *ngIf="contrato !== undefined">
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
         <ng-container matColumnDef="fechaEnvioInformeFinal">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha del envío del informe final </th>
-            <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaEnvioInformeFinal }}</b> </td>
+            <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaEnvio }}</b> </td>
         </ng-container>
         <ng-container matColumnDef="fechaAprobacionInformeFinal">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de aprobación del informe final </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.fechaAprobacionInformeFinal }} </td>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element.fechaAprobacion }} </td>
         </ng-container>
         <ng-container matColumnDef="llaveMen">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Llave MEN </th>
@@ -27,9 +27,11 @@
         <ng-container matColumnDef="gestion">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
             <td mat-cell *matCellDef="let element" align="center">
-                <button mat-raised-button color="accent" class="btn-table"
-                (click)="verDetalleInformeFinal(element.id)">
-                Ver detalle
+                <button mat-raised-button
+                        color="accent"
+                        class="btn-table"
+                        [routerLink]="[ '/registrarLiquidacionContrato/detalleInformeFinal', element.proyectoId ]">
+                        Ver detalle
             </button>
             </td>
         </ng-container>
